--- a/app.html
+++ b/app.html
@@ -3,14 +3,16 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Grid Demo</title>
+    <title>Single Page Application Template Demo</title>
     <link rel="stylesheet" href="app.css">
 </head>
 <body>
 <h1>Single Page Application Layout Demo</h1>
 
 <hr>
-
+<p>
+    Based on an idea found <a href="https://www.whitebyte.info/programming/css/how-to-make-a-div-take-the-remaining-height">here</a>
+</p>
 <ul>
     <li>body and html element streching full height</li>
     <li>Using Flexbox to layout all childs of the body element vertically</li>
