dev cntr  and overscroll supression added

--- a/app.html
+++ b/app.html
@@ -17,7 +17,8 @@
     <li>body and html element streching full height</li>
     <li>Using Flexbox to layout all childs of the body element vertically</li>
     <li>No owverflow, no scrollbars</li>
-    <li>Using Grind for the central 3x3 row/ column part</li>
+    <li>No overscroll</li>
+    <li>Using CSS-Grid for the central 3x3 row/ column part</li>
 </ul>
 <script type=module>
     console.log("*** inline JavaScript ***");
